--- a/agex-app/package.json
+++ b/agex-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primeuix/themes": "^1.1.2",
     "@tailwindcss/vite": "^4.1.10",
+    "boxicons": "^2.1.4",
     "primevue": "^4.3.5",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.17",
