--- a/agex-app/package.json
+++ b/agex-app/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "devmynuts": "vite --mode devmynuts --host"
   },
   "dependencies": {
     "@primeuix/themes": "^1.1.2",
+    "@primevue/forms": "^4.3.6",
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.10.0",
     "boxicons": "^2.1.4",
     "primevue": "^4.3.5",
     "tailwindcss": "^4.1.10",
