--- a/agex-app/package.json
+++ b/agex-app/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode dev",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "devmynuts": "vite --mode devmynuts --host"
@@ -15,12 +15,14 @@
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
     "boxicons": "^2.1.4",
+    "lodash": "^4.17.21",
     "primevue": "^4.3.5",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.20",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vitejs/plugin-vue-jsx": "^5.0.0",
     "@vue/tsconfig": "^0.7.0",
